# CsengetoCLI

./: .gitignore  Cargo.toml  README.md  db.db3
.github/workflows/: build.yml  release.yml  rust.yml
scripts/: build_both.bat
src/: checker.rs  config.rs  main.rs
