[package]
name = "csengeto_cli"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
lazy_static = "1.5.0"
reqwest = "0.12.23"
rodio = "0.17"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "tokio-macros"] }
